2003-08-19  KATO Kazuyoshi  <kzys@users.sf.net>

	* src/rbgdkdisplaymanager.c: Added.
	* src/rbgtklabel.c: Implement Gtk::Label#text=.
	* sample/gtk-demo/common.rb: Follow Demo::Main changes.
	* sample/gtk-demo/main.rb: Fix and destroy closed window.

2003-08-17  KATO Kazuyoshi  <kzys@users.sf.net>

	* sample/gtk-demo/stock_browser.rb: Added.
	* sample/gtk-demo/main.rb: When ARGV passed, Show only class/file
	which read from ARGV.
	* sample/gtk-demo/common.rb: Code cleanup.

2003-08-17 Martin Povolny <xpovolny@fi.muni.cz>
    * src/rbgdkatom.c: Fix memory leak in gdkatom_name reported by 
    Jan Becvar <jean@solnet.cz>.

2003-08-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkconst.c: Update version number.
	* src/depend: Use old style.
	* extconf.rb, src/rbgdk.c: Fix compile error for Win32.

2003-08-06  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtktextbuffer.c (txt_insert_child_anchor): pass correct
	anchor to gtk_text_buffer_insert_child_anchor().

2003-08-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreemodel.c: Add Gtk::TreeModel#iter_first.

2003-07-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkmessagedialog.c: Fix constants.
	* sample/gtk-demo/textview.rb: Fix warnings for ruby-1.8.x.

2003-07-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdrag.c: Gtk::Drag.begin, .get_target_list, .set_target_list.
	* src/rbgtktextview.c: Gtk::TextView#scroll_to_iter return true or false.

2003-07-29  Geoff Youngs  <g@intersect-uk.co.uk>

	* src/rbgdkevent.c: Use G_RENAME_CONSTANTS for [23]BUTTON_PRESS

2003-07-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdk.c: Add Gdk.set_x_error_handler, Gdk.set_x_io_error_handler.
	Suggested by Tom Felker.
	* extconf.rb: Check "X11/Xlib.h" 

2003-07-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkdisplay.c: Gdk::Display.new doesn't call 
	gdk_display_get_default. 

2003-07-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreeviewcolumn.c: Fix G_DEF_CONSTANTS. Reported by Geoff Youngs.
