@@ -1,3 +1,10 @@
+2003-08-20  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+	
+	* src/rbgdkevent.c: use G_DEF_CONSTANTS() for
+	GDK_TYPE_SCROLL_DIRECTION, GDK_TYPE_VISIBILITY_STATE,
+	GDK_TYPE_CROSSING_MODE, GDK_TYPE_NOTIFY_TYPE, GDK_TYPE_PROPERTY_STATE
+	and GDK_TYPE_WINDOW_STATE.
+
 2003-08-19  KATO Kazuyoshi  <kzys@users.sf.net>
 
 	* src/rbgdkdisplaymanager.c: Added.
